--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -1,45 +1,66 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block title %}
-  {% if is_edit %}
-    Редактировать запись
-  {% else %}
-    Добавить запись
-  {% endif %}
+{% if is_edit %}
+Редактировать
+{% else %}
+Новая запись
+{% endif %}
 {% endblock %}
 {% block content %}
-  <div class="container py-5"> 
-    <div class="row justify-content-center">
-      <div class="col-md-8 p-5">
-        <div class="card">
-          <div class="card-header">
-            {% if is_edit %}
-            Редактировать запись
-            {% else %}
-            Добавить запись
-            {% endif %}
-          </div>
-          <div class="card-body">
-            {% include 'includes/forms/fields_if_form_errors.html' %}
-            <form method="post"
+{% load user_filters %}
+<body>
+  <main>
+    <div class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-md-8 p-5">
+          <div class="card">
+            <div class="card-header">
+              {% if is_edit %}
+              Редактировать пост
+              {% else %}
+              Новый пост
+              {% endif %}
+            </div>
+            <div class="card-body">
+              {% include 'includes/forms/fields_if_form_errors.html' %}
+              <form method="post"
               {% if action_url %}
                 action="{% url action_url %}"
               {% endif %}
-            >
+              <form method="post" enctype="multipart/form-data">
               {% csrf_token %}
               {% include 'includes/forms/fields_if_form_errors.html' %}
-              <div class="col-md-6 offset-md-4">
-                <button type="submit" class="btn btn-primary">
-                  {% if is_edit %}
+                <div class="form-group row my-3 p-3">
+                  {% for field in form %}
+                  <label for="id_text">
+                    {{ field.label }}
+                    {% if field.field.required %}
+                    <span class="required text-danger">*</span>
+                    {% endif %}
+                  </label>
+                  {{ field|addclass:"form-control" }}
+                  <small>
+                    {% if field.help_text %}
+                    <p class="help">{{ field.help_text|safe }}</p>
+                    {% endif %}
+                  </small>
+                  {% endfor %}
+                </div>
+                <div class="d-flex justify-content-end">
+                  <button type="submit" class="btn btn-primary">
+                    {% if is_edit %}
                     Сохранить
-                  {% else %}
-                    Добавить
-                  {% endif %}
-                </button>
-              </div>
-            </form>
-          </div> 
-        </div> 
+                    {% else %}
+                    Опубликовать
+                    {% endif %}
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
-    </div> 
-  </div>
+    </div>
+  </main>
+</body>
 {% endblock %}
