--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}{{ group.title }}{% endblock %}
 {% block content %}
   <h1>{{ group.title }}</h1>
@@ -9,5 +10,8 @@
         {% for post in page_obj %}
         {% include 'posts/includes/post_card.html' with show_profile_link=True%}
         {% endfor %}
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}">
+        {% endthumbnail %}
 </div>
 {% endblock %}
