--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
 <div class="container py-5">
@@ -6,6 +7,9 @@
     {% for post in page_obj %}
     {% include 'posts/includes/post_card.html' with show_group_link=True show_profile_link=True%}
     {% endfor %}
+    {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+      <img class="card-img my-2" src="{{ im.url }}">
+    {% endthumbnail %}
     {% include 'posts/includes/paginator.html' %}
 </div>
 {% endblock %}
