--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}Все посты пользователя{% endblock %}
 {% block content %} 
       <div class="row">
@@ -8,6 +9,9 @@
               Дата публикации: {{ post.pub_date|date:"d E Y" }}
             </li>
             {% if post.group %}  
+            {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+              <img class="card-img my-2" src="{{ im.url }}">
+            {% endthumbnail %}
             <li class="list-group-item">
               Группа: {{post.group}}
               <a href="{% url 'posts:group_list' post.group.slug %}">
