--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block content %} 
       <div class="container py-5">        
         <h1>Все посты пользователя {{author}} </h1>
@@ -6,6 +7,9 @@
            {% for post in page_obj %}
            {% include 'posts/includes/post_card.html' with show_group_link=True %} 
            {% endfor %}
+           {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+           <img class="card-img my-2" src="{{ im.url }}">
+           {% endthumbnail %}
           {% include 'posts/includes/paginator.html' %}
       </div>
 {% endblock %}
