--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -9,9 +9,6 @@
               Дата публикации: {{ post.pub_date|date:"d E Y" }}
             </li>
             {% if post.group %}  
-            {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-              <img class="card-img my-2" src="{{ im.url }}">
-            {% endthumbnail %}
             <li class="list-group-item">
               Группа: {{post.group}}
               <a href="{% url 'posts:group_list' post.group.slug %}">
@@ -33,9 +30,10 @@
           </ul>
         </aside>
         <article class="col-12 col-md-9">
-          <p>
-           {{ post.text|linebreaksbr }}
-          </p>
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}">
+        {% endthumbnail %}
+        <p>{{ post.text|linebreaksbr }}</p>
             {% if request.user == post.author %}
             <a class="btn btn-primary" href="{% url 'posts:post_edit' post_id=post.pk %}">
             Редактировать запись
